deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appme-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: appme
  template:
    metadata:
      labels:
        app: appme
    spec:
      containers:
        - name: appme-container
          image: ganjivasu/java-me:v4
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
