service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appme-service
spec:
  type: NodePort
  selector:
    app: appme
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
