ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appme-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: appme.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appme-service
                port:
                  number: 3000
